test/fail/integration/_fail_grammar_type_value_1.hs
main = do
       let x :: [int]
       print "hello"